// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storage-settings-events-records-form Renders \`storage-settings-events-records-form\` with custom form and history 1`] = `
<div
  class="layout c-information-block column"
>
  <div
    class="layout"
  >
    <div
      class="text-subtitle-1 font-weight-bold"
    >
      Events recordings
    </div>
    <!---->
  </div>
  <div
    class="layout mt-2"
  >
    <span
      class="text--secondary"
    >
      <storage-settings-history-message-stub
        history="1611210000"
      />
    </span>
  </div>
  <c-enabled-duration-field-stub
    hide-value-on-false=""
    label="Delete events recordings"
    name="eventsRecords.delete_after"
    suffix="Older than"
    switcher=""
    value="[object Object]"
  />
</div>
`;

exports[`storage-settings-events-records-form Renders \`storage-settings-events-records-form\` with default form 1`] = `
<div
  class="layout c-information-block column"
>
  <div
    class="layout"
  >
    <div
      class="text-subtitle-1 font-weight-bold"
    >
      Events recordings
    </div>
    <!---->
  </div>
  <!---->
  <c-enabled-duration-field-stub
    hide-value-on-false=""
    label="Delete events recordings"
    name="eventsRecords.delete_after"
    suffix="Older than"
    switcher=""
    value="[object Object]"
  />
</div>
`;
